--- a/recetas/Colombia/arroz_coco.html
+++ b/recetas/Colombia/arroz_coco.html
@@ -5,7 +5,7 @@
 	<TITLE>Arroz con Coco</TITLE>
 </HEAD>
 <BODY LANG="es-ES">
-<H1><IMG ID="imagen1" SRC="../../imagenes/arrozcoco.jpg" NAME="imagen1" ALIGN=LEFT BORDER=0><BR CLEAR=LEFT><BR>
+<H1><IMG ID="imagen1" SRC="../../imagenes/arroz_coco.jpg" NAME="imagen1" ALIGN=LEFT BORDER=0><BR CLEAR=LEFT><BR>
 </H1>
 <H1 ID="titulo1">Arroz con Coco</H1>
 <BR>
